--- a/Hoof/Views/Hunt/Loss.cshtml
+++ b/Hoof/Views/Hunt/Loss.cshtml
@@ -282,9 +282,9 @@
                     City: $('#circuit :selected').text(),
                     Circuit: $('#circuit :selected').val(),
                     District: $('#district :selected').val(),
-                    GameType: 1,
-                    GameKind: $('#gameKindSelect :selected').val(),
-                    GameSubKind: $('#gameSubKindSelect :selected').val(),
+                    Type: 1,
+                    Kind: $('#gameKindSelect :selected').val(),
+                    SubKind: $('#gameSubKindSelect :selected').val(),
                     SanitaryLoss: $('#sanitaryLoss').is(':checked'),
                     Description: $('#description').val()
                 };
