Move reporting losses functionality to dedicated controller

--- a/Hoof/Views/Shared/_Layout.cshtml
+++ b/Hoof/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                             <li>@Html.ActionLink("Moje polowania", "MyHunts", "Hunt")</li>
                         </ul>
                     </li>
-                    <li>@Html.ActionLink("Ubytki", "Loss", "Hunt")</li>
+                    <li>@Html.ActionLink("Ubytki", "Index", "Loss")</li>
                 </ul>
             </div>
         </div>
