--- a/Hoof/Views/Loss/Index.cshtml
+++ b/Hoof/Views/Loss/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Domain.GameLoss.ViewModel.GameLossViewModel>
 
 @{
-    ViewBag.Title = "Loss";
+    ViewBag.Title = "Index";
 }
 
 <h2>Ubytki</h2>
@@ -22,6 +22,9 @@
             @Html.DisplayNameFor(model => model.SubKindName)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.ClassName)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.SanitaryLoss)
         </th>
         <th>
@@ -38,45 +41,47 @@
         </th>
         <th></th>
     </tr>
-    @if (Model != null)
+
+    @foreach (var item in Model)
     {
-        foreach (var item in Model)
-        {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.TypeName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.KindName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SubKindName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SanitaryLoss)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Circuit)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.District)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Date)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-        }
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.TypeName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.KindName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SubKindName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ClassName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SanitaryLoss)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Circuit)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.District)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            </td>
+        </tr>
     }
 
 </table>
+
 <div class="modal" id="reportLossModal">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -97,33 +102,33 @@
                     <div class="form-group">
                         <div class="col-md-10">
                             Okręg: @Html.DropDownList("Wybierz Obwód", new List<SelectListItem>
-                            {
-                                new SelectListItem {Text = "Płytnica", Value = "20"}
-                            }, "", new { @class = "form-control", id="circuit"})
+                     {
+                         new SelectListItem {Text = "Płytnica", Value = "20"}
+                     }, "", new { @class = "form-control", id="circuit"})
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-md-10">
                             Region: @Html.DropDownList("Wybierz Rewir", new List<SelectListItem>
-                            {
-                                new SelectListItem {Text = "1", Value = "1"},
-                                new SelectListItem {Text = "2", Value = "2"},
-                                new SelectListItem {Text = "3", Value = "3"},
-                                new SelectListItem {Text = "4", Value = "4"},
-                                new SelectListItem {Text = "5", Value = "5"},
-                                new SelectListItem {Text = "6", Value = "6"},
-                                new SelectListItem {Text = "7", Value = "7"},
-                                new SelectListItem {Text = "8", Value = "8"},
-                                new SelectListItem {Text = "9", Value = "9"},
-                                new SelectListItem {Text = "10", Value = "10"},
-                                new SelectListItem {Text = "11", Value = "11"},
-                                new SelectListItem {Text = "12", Value = "12"},
-                                new SelectListItem {Text = "13", Value = "13"},
-                                new SelectListItem {Text = "14", Value = "14"},
-                                new SelectListItem {Text = "15", Value = "15"},
-                                new SelectListItem {Text = "16", Value = "16"}
-                            }, "", new { @class = "form-control", id= "district" })
+                    {
+                        new SelectListItem {Text = "1", Value = "1"},
+                        new SelectListItem {Text = "2", Value = "2"},
+                        new SelectListItem {Text = "3", Value = "3"},
+                        new SelectListItem {Text = "4", Value = "4"},
+                        new SelectListItem {Text = "5", Value = "5"},
+                        new SelectListItem {Text = "6", Value = "6"},
+                        new SelectListItem {Text = "7", Value = "7"},
+                        new SelectListItem {Text = "8", Value = "8"},
+                        new SelectListItem {Text = "9", Value = "9"},
+                        new SelectListItem {Text = "10", Value = "10"},
+                        new SelectListItem {Text = "11", Value = "11"},
+                        new SelectListItem {Text = "12", Value = "12"},
+                        new SelectListItem {Text = "13", Value = "13"},
+                        new SelectListItem {Text = "14", Value = "14"},
+                        new SelectListItem {Text = "15", Value = "15"},
+                        new SelectListItem {Text = "16", Value = "16"}
+                    }, "", new { @class = "form-control", id= "district" })
                         </div>
                     </div>
 
@@ -131,16 +136,16 @@
                         <div class="form-group" id="gameKindSection">
                             <div class="col-md-10">
                                 Typ zwierzyny: @Html.DropDownList("Wybierz typ zwierzyny", new List<SelectListItem>
-                                {
-                                    new SelectListItem {Text = "", Value = "-1"},
-                                    new SelectListItem {Text = "Łoś", Value = "1"},
-                                    new SelectListItem {Text = "Jeleń", Value = "2"},
-                                    new SelectListItem {Text = "Jeleń Sika", Value = "3"},
-                                    new SelectListItem {Text = "Daniel", Value = "4"},
-                                    new SelectListItem {Text = "Sarna", Value = "5"},
-                                    new SelectListItem {Text = "Muflon", Value = "6"},
-                                    new SelectListItem {Text = "Dzik", Value = "7"},
-                                }, new { @class = "form-control" , id = "gameKindSelect"})
+                 {
+                     new SelectListItem {Text = "", Value = "-1"},
+                     new SelectListItem {Text = "Łoś", Value = "1"},
+                     new SelectListItem {Text = "Jeleń", Value = "2"},
+                     new SelectListItem {Text = "Jeleń Sika", Value = "3"},
+                     new SelectListItem {Text = "Daniel", Value = "4"},
+                     new SelectListItem {Text = "Sarna", Value = "5"},
+                     new SelectListItem {Text = "Muflon", Value = "6"},
+                     new SelectListItem {Text = "Dzik", Value = "7"},
+                 }, new { @class = "form-control" , id = "gameKindSelect"})
                             </div>
                         </div>
 
@@ -149,7 +154,7 @@
                                 Odstrzał sanitarny: <input type="checkbox" class="form-control" id="sanitaryLoss" />
                             </div>
                         </div>
-                        
+
                         <div class="form-group" id="descriptionSection">
                             <div class="col-md-10">
                                 Opis: <input type="text" class="form-control" id="description" />
@@ -220,7 +225,7 @@
 
         function setGameSubKindOptions(selectedValue) {
             var selectedValueInt = parseInt(selectedValue);
-            
+
             var gamesWithSubKinds = getGameWithSubKinds();
             var isSelected = isGameWithSubKindSelected(selectedValueInt, gamesWithSubKinds);
             if (!isSelected) {
@@ -291,7 +296,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: '/Hunt/ReportLoss',
+                    url: '/Loss/ReportLoss',
                     data: model,
                     dataType: 'json',
                     success: function(data) {
