Move getting game information functionality to dedicated controller

--- a/Hoof/Views/Loss/Index.cshtml
+++ b/Hoof/Views/Loss/Index.cshtml
@@ -181,7 +181,7 @@
             function() {
                 $.ajax({
                     type: "GET",
-                    url: '/Hunt/GetGameList',
+                    url: '/Game/GetGameModels',
                     success: function(data) {
                         $gameList = data;
                     },
