--- a/Hoof/Views/Hunt/MyHunts.cshtml
+++ b/Hoof/Views/Hunt/MyHunts.cshtml
@@ -174,7 +174,7 @@
             function() {
                 $.ajax({
                     type: "GET",
-                    url: '/Hunt/GetGameList',
+                    url: '/Game/GetGameModels',
                     success: function(data) {
                         $gameList = data;
                     },
