Display Min/Max Culls and Catches on Annual Plan - unnecessary fields will be masked on client side later

--- a/Hoof/Views/AnnualPlan/Plan.cshtml
+++ b/Hoof/Views/AnnualPlan/Plan.cshtml
@@ -344,10 +344,10 @@
             <td></td>
             <td>@gameKindPlanModel.CurrentHuntPlanCulls</td>
             <td>@gameKindPlanModel.CurrentHuntPlanCatches</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>@gameKindPlanModel.CurrentHuntPlanCullsMin</td>
+            <td>@gameKindPlanModel.CurrentHuntPlanCullsMax</td>
+            <td>@gameKindPlanModel.CurrentHuntPlanCatchesMin</td>
+            <td>@gameKindPlanModel.CurrentHuntPlanCatchesMax</td>
         </tr>
         foreach (AnnualPlanSubKindGameModel gameSubKindPlanModel in gameKindPlanModel.AnnualPlanSubKindGameModels)
         {
@@ -463,10 +463,10 @@
             <td></td>
             <td>@gameKindPlanModel.CurrentHuntPlanCulls</td>
             <td>@gameKindPlanModel.CurrentHuntPlanCatches</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>@gameKindPlanModel.CurrentHuntPlanCullsMin</td>
+            <td>@gameKindPlanModel.CurrentHuntPlanCullsMax</td>
+            <td>@gameKindPlanModel.CurrentHuntPlanCatchesMin</td>
+            <td>@gameKindPlanModel.CurrentHuntPlanCatchesMax</td>
         </tr>
 
         foreach (var gameSubKindPlanModel in gameKindPlanModel.AnnualPlanSubKindGameModels)
@@ -482,10 +482,10 @@
                 <td></td>
                 <td>@gameSubKindPlanModel.CurrentHuntPlanCulls</td>
                 <td>@gameSubKindPlanModel.CurrentHuntPlanCatches</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>@gameSubKindPlanModel.CurrentHuntPlanCullsMin</td>
+                <td>@gameSubKindPlanModel.CurrentHuntPlanCullsMax</td>
+                <td>@gameSubKindPlanModel.CurrentHuntPlanCatchesMin</td>
+                <td>@gameSubKindPlanModel.CurrentHuntPlanCatchesMax</td>
             </tr>
         }
 
